[gd_scene load_steps=24 format=3 uid="uid://gcst8v7qoupg"]

[ext_resource type="Script" uid="uid://cee0m70dph0u1" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://b3i7trd7303gl" path="res://album.tscn" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://b56kogsodwe0w" path="res://main.tres" id="2_vivmo"]
[ext_resource type="FontFile" uid="uid://cxivrtf35ejuu" path="res://editundo.ttf" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://csy7hr7ayvxhb" path="res://Song.tscn" id="3_h2yge"]
[ext_resource type="FontFile" uid="uid://c4pcve0k65tc" path="res://fs-pixel-sans-unicode-regular.ttf" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://b863kvnbm6nmc" path="res://slider.png" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://dblam8cul5kk7" path="res://Buttons/sprite_01.png" id="7_4c57u"]
[ext_resource type="Texture2D" uid="uid://dgtyor3e1m2pn" path="res://Buttons/sprite_05.png" id="8_w48qg"]
[ext_resource type="Texture2D" uid="uid://8h5u2g3ouyjt" path="res://Buttons/sprite_11.png" id="9_dg77c"]
[ext_resource type="Texture2D" uid="uid://d00owcr0236hu" path="res://Buttons/sprite_03.png" id="9_vivmo"]
[ext_resource type="Texture2D" uid="uid://cj6xyuay4q5p7" path="res://Buttons/sprite_09.png" id="10_ycdy4"]
[ext_resource type="Texture2D" uid="uid://c0stvxi4vv734" path="res://Buttons/sprite_17.png" id="11_w48qg"]
[ext_resource type="Texture2D" uid="uid://bn40nerh7204x" path="res://Buttons/sprite_15.png" id="12_vivmo"]
[ext_resource type="Texture2D" uid="uid://b4xvinc0a51ow" path="res://Buttons/sprite_19.png" id="13_2cqfq"]
[ext_resource type="Texture2D" uid="uid://dlvr12d7j5mhn" path="res://Buttons/sprite_13.png" id="14_yaehf"]
[ext_resource type="Texture2D" uid="uid://bfhg0o3ocomhp" path="res://Buttons/sprite_07.png" id="16_yaehf"]
[ext_resource type="Shader" uid="uid://dgd421dgrc814" path="res://main.gdshader" id="18_074og"]

[sub_resource type="Gradient" id="Gradient_w48qg"]
colors = PackedColorArray(0.0646965, 0.0646965, 0.0646965, 1, 0.190762, 0.190762, 0.190762, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vivmo"]
gradient = SubResource("Gradient_w48qg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0, 1, 0.52549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0, 1, 0.52549, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cegan"]
shader = ExtResource("18_074og")
shader_parameter/epsilon = 0.0001
shader_parameter/origin = Color(0, 1, 0.52549, 1)
shader_parameter/new = Color(0, 1, 0.52549, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -172.0
offset_top = 582.0
offset_right = 485.0
offset_bottom = 1247.0
rotation = -1.5708
texture = ExtResource("2_vivmo")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 494.0
offset_bottom = 582.0
color = Color(0, 0.211125, 0.526952, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = 582.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 491.0
offset_top = 582.0
offset_right = 495.0
offset_bottom = 648.0
color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 493.0
offset_right = 1152.0
offset_bottom = 582.0
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="MainColor" type="TextureRect" parent="ColorRect3"]
layout_mode = 0
offset_top = 582.0
offset_right = 657.0
offset_bottom = 1247.0
rotation = -1.5708
texture = SubResource("GradientTexture2D_vivmo")

[node name="AlbumList" type="Node2D" parent="."]
position = Vector2(502, 70)

[node name="Album1" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 26.0
offset_top = -6.0
offset_right = 114.0
offset_bottom = 82.0

[node name="Album2" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 126.0
offset_top = -6.0
offset_right = 214.0
offset_bottom = 82.0
index = 1

[node name="Album3" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 226.0
offset_top = -6.0
offset_right = 314.0
offset_bottom = 82.0
index = 2

[node name="Album4" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 326.0
offset_top = -6.0
offset_right = 414.0
offset_bottom = 82.0
index = 3

[node name="Album5" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 426.0
offset_top = -6.0
offset_right = 514.0
offset_bottom = 82.0
index = 4

[node name="Album6" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 526.0
offset_top = -6.0
offset_right = 614.0
offset_bottom = 82.0
index = 5

[node name="Album7" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 26.0
offset_top = 94.0
offset_right = 114.0
offset_bottom = 182.0
index = 6

[node name="Album8" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 126.0
offset_top = 94.0
offset_right = 214.0
offset_bottom = 182.0
index = 7

[node name="Album9" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 226.0
offset_top = 94.0
offset_right = 314.0
offset_bottom = 182.0
index = 8

[node name="Album10" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 326.0
offset_top = 94.0
offset_right = 414.0
offset_bottom = 182.0
index = 9

[node name="Album11" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 426.0
offset_top = 94.0
offset_right = 514.0
offset_bottom = 182.0
index = 10

[node name="Album12" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 526.0
offset_top = 94.0
offset_right = 614.0
offset_bottom = 182.0
index = 11

[node name="Album13" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 26.0
offset_top = 194.0
offset_right = 114.0
offset_bottom = 282.0
index = 12

[node name="Album14" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 126.0
offset_top = 194.0
offset_right = 214.0
offset_bottom = 282.0
index = 13

[node name="Album15" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 226.0
offset_top = 194.0
offset_right = 314.0
offset_bottom = 282.0
index = 14

[node name="Album16" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 326.0
offset_top = 194.0
offset_right = 414.0
offset_bottom = 282.0
index = 15

[node name="Album17" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 426.0
offset_top = 194.0
offset_right = 514.0
offset_bottom = 282.0
index = 16

[node name="Album18" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 526.0
offset_top = 194.0
offset_right = 614.0
offset_bottom = 282.0
index = 17

[node name="Album19" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 26.0
offset_top = 294.0
offset_right = 114.0
offset_bottom = 382.0
index = 18

[node name="Album20" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 126.0
offset_top = 294.0
offset_right = 214.0
offset_bottom = 382.0
index = 19

[node name="Album21" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 226.0
offset_top = 294.0
offset_right = 314.0
offset_bottom = 382.0
index = 20

[node name="Album22" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 326.0
offset_top = 294.0
offset_right = 414.0
offset_bottom = 382.0
index = 21

[node name="Album23" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 426.0
offset_top = 294.0
offset_right = 514.0
offset_bottom = 382.0
index = 22

[node name="Album24" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 526.0
offset_top = 294.0
offset_right = 614.0
offset_bottom = 382.0
index = 23

[node name="Album25" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 26.0
offset_top = 394.0
offset_right = 114.0
offset_bottom = 482.0
index = 24

[node name="Album26" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 126.0
offset_top = 394.0
offset_right = 214.0
offset_bottom = 482.0
index = 25

[node name="Album27" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 226.0
offset_top = 394.0
offset_right = 314.0
offset_bottom = 482.0
index = 26

[node name="Album28" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 326.0
offset_top = 394.0
offset_right = 414.0
offset_bottom = 482.0
index = 27

[node name="Album29" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 426.0
offset_top = 394.0
offset_right = 514.0
offset_bottom = 482.0
index = 28

[node name="Album30" parent="AlbumList" instance=ExtResource("2_0xm2m")]
offset_left = 526.0
offset_top = 394.0
offset_right = 614.0
offset_bottom = 482.0
index = 29

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 503.0
offset_top = 1.0
offset_right = 909.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_1bvp3")
theme_override_font_sizes/font_size = 40
text = "FRACTAL MUSIC PLAYER"

[node name="Name" type="Label" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 368.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("3_1bvp3")
theme_override_font_sizes/font_size = 32
autowrap_mode = 2

[node name="FlavorName" type="Label" parent="."]
offset_left = 527.0
offset_top = 43.0
offset_right = 770.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("3_1bvp3")
theme_override_font_sizes/font_size = 15

[node name="SongName" type="Label" parent="."]
offset_left = 132.0
offset_top = 591.0
offset_right = 417.0
offset_bottom = 643.0
theme_override_fonts/font = ExtResource("5_lquwl")
theme_override_font_sizes/font_size = 24
vertical_alignment = 1
autowrap_mode = 2

[node name="SongList" type="Node2D" parent="."]
position = Vector2(5, 5)

[node name="Song1" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 60.0
offset_right = 368.0
offset_bottom = 112.0

[node name="Song2" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 115.0
offset_right = 368.0
offset_bottom = 167.0
index = 1

[node name="Song3" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 170.0
offset_right = 368.0
offset_bottom = 222.0
index = 2

[node name="Song4" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 225.0
offset_right = 368.0
offset_bottom = 277.0
index = 3

[node name="Song5" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 280.0
offset_right = 368.0
offset_bottom = 332.0
index = 4

[node name="Song6" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 335.0
offset_right = 368.0
offset_bottom = 387.0
index = 5

[node name="Song7" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 390.0
offset_right = 368.0
offset_bottom = 442.0
index = 6

[node name="Song8" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 445.0
offset_right = 368.0
offset_bottom = 497.0
index = 7

[node name="Song9" parent="SongList" instance=ExtResource("3_h2yge")]
offset_left = -3.0
offset_top = 500.0
offset_right = 368.0
offset_bottom = 552.0
index = 8

[node name="Up" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 388.0
offset_top = 75.0
offset_right = 448.0
offset_bottom = 123.0
tooltip_text = "Previous Song Page"
text = "UP"

[node name="Play" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 390.0
offset_top = 185.0
offset_right = 448.0
offset_bottom = 243.0
tooltip_text = "Play Album"
text = "PLAY"

[node name="Shuffle" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 390.0
offset_top = 247.0
offset_right = 448.0
offset_bottom = 305.0
tooltip_text = "Toggle Shuffle"

[node name="Down" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 388.0
offset_top = 127.0
offset_right = 449.0
offset_bottom = 175.0
tooltip_text = "Next Song Page"
text = "DOWN"

[node name="Pause" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 2.0
offset_top = 591.0
offset_right = 63.0
offset_bottom = 639.0
tooltip_text = "Pause Song"
text = "PAUSE"

[node name="Loop" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 66.0
offset_top = 592.0
offset_right = 127.0
offset_bottom = 640.0
tooltip_text = "Loop Song/Album"
text = "LOOP"

[node name="Next" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 974.0
offset_top = 14.0
offset_right = 1035.0
offset_bottom = 61.0
tooltip_text = "Next Album Page"
text = "NEXT"

[node name="Previous" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 909.0
offset_top = 14.0
offset_right = 970.0
offset_bottom = 61.0
tooltip_text = "Previous Album Page"
text = "PREV"

[node name="Next3" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 390.0
offset_top = 451.0
offset_right = 448.0
offset_bottom = 509.0
tooltip_text = "Skip Song"
text = "NEXT"

[node name="Previous2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 390.0
offset_top = 384.0
offset_right = 448.0
offset_bottom = 442.0
tooltip_text = "Previous Song"
text = "PREV"

[node name="Time" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 502.0
offset_top = 601.0
offset_right = 698.0
offset_bottom = 633.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_1bvp3")
theme_override_font_sizes/font_size = 32
text = "00:00 / 00:00"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 1032.0
offset_top = 605.0
offset_right = 1142.0
offset_bottom = 621.0
theme_override_icons/grabber = ExtResource("6_7mycd")
theme_override_icons/grabber_highlight = ExtResource("6_7mycd")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lquwl")
max_value = 1.5
step = 0.01
value = 0.75

[node name="ProgressBar" type="HSlider" parent="."]
offset_left = 702.0
offset_top = 603.0
offset_right = 1021.0
offset_bottom = 619.0
theme_override_icons/grabber = ExtResource("6_7mycd")
theme_override_icons/grabber_highlight = ExtResource("6_7mycd")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lquwl")
step = 0.01

[node name="Up2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(417, 98)
scale = Vector2(3, 3)
texture = ExtResource("7_4c57u")

[node name="Prev2" type="Sprite2D" parent="."]
modulate = Color(0.662452, 0.662452, 0.662452, 1)
texture_filter = 1
position = Vector2(940, 32)
scale = Vector2(3, 3)
texture = ExtResource("10_ycdy4")

[node name="Next2" type="Sprite2D" parent="."]
modulate = Color(0.662452, 0.662452, 0.662452, 1)
texture_filter = 1
position = Vector2(1005, 32)
scale = Vector2(3, 3)
texture = ExtResource("8_w48qg")

[node name="Down2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(417, 152)
scale = Vector2(3, 3)
texture = ExtResource("9_vivmo")

[node name="Play2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(417, 214)
scale = Vector2(3, 3)
texture = ExtResource("11_w48qg")

[node name="Shuffle2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(417, 276)
scale = Vector2(3, 3)
texture = ExtResource("12_vivmo")

[node name="Pause2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(32, 615)
scale = Vector2(3, 3)
texture = ExtResource("13_2cqfq")

[node name="Loop2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(96, 615)
scale = Vector2(3, 3)
texture = ExtResource("14_yaehf")

[node name="Skip" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(419, 479)
scale = Vector2(3, 3)
texture = ExtResource("16_yaehf")

[node name="GoBack" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(419, 413)
scale = Vector2(3, 3)
texture = ExtResource("9_dg77c")

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShaderRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cegan")
offset_left = 667.0
offset_top = 589.0
offset_right = 1140.0
offset_bottom = 629.0
mouse_filter = 2

[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Shuffle" to="." method="_on_shuffle_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Loop" to="." method="_on_loop_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Next3" to="." method="_on_next_3_pressed"]
[connection signal="pressed" from="Previous2" to="." method="_on_previous_2_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="drag_ended" from="ProgressBar" to="." method="_on_progress_bar_drag_ended"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_button_timer_timeout"]
